--- a/portfolio.css
+++ b/portfolio.css
@@ -263,18 +263,15 @@ footer {
     }
 }
 
-#video1 {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 90vw;
-    height: auto;
-    z-index:1000;
+#iframe1 iframe {
+    width: 800px;
+    height:400px;
+    max-width: 600px;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    display: block;
 }
-@media (max-width: 768px){
-    #video1 video {
-        max-width: 200px;
-    }
-}
+
+
 
